--- a/study.html
+++ b/study.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/navi.min.css">
 </head>
 <body>
-    <header id="bby_hd">
+    <header id="khj_hd">
         <ul id="khj_gnb">
 
         </ul>
@@ -18,6 +18,45 @@
         <section id="sec3"></section>
         <section id="sec4"></section>
     </main>
-    <script src="./js/study2.js"></script>
+    <script src="./js/study3.js"></script>
 </body>
 </html>
+
+<ul>
+    <li>
+        <a href=""></a>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </li>
+    <li>
+        <a href=""></a>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </li>
+    <li>
+        <a href=""></a>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </li>
+    <li>
+        <a href=""></a>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </li>
+</ul>
